--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -87,7 +87,7 @@
             @include transition-ease;
 
             &.open {
-                transform: translateX(0);
+                transform: translateX(-35vw);
             }
 
             &.active>a {
